        removed.

      - ZGadyFlyDA/Gadfly is deprecated

      - deprecated OFS.content_types (to be removed in Zope 2.11) and
        replaced all occurences with zope.app.content_types 

      - OFS.content_types: moved code to zope.app.content_types and added
        method aliases

      - Using FastCGI is offically deprecated.

    Features added

      - Updated to Docutils 0.4.0 

      - reStructuredText: The default value for the 'stylesheet'
        property has been changed from 'default.css' to None because
        there is no 'default.css' file by default. 

      - ZReST: rewritten render() method to integrate it smoothly
        with Docutils 0.4.0. The default value for the 'stylesheet'
        property has been changed from 'default.css' to None because
        there is no 'default.css' file by default. 

      - Added a "clock server" servertype which allows users to
        configure methods that should be called periodically as if
        they were being called by a remote user agent on one of Zope's
        HTTP ports.  This is meant to replace wget+cron for some class
        of periodic callables.

        To use, create a "clock-server" directive section anywhere
        in your zope.conf file, like so:

         <clock-server>
            method /do_stuff
            period 60
            user admin
            password 123
            host localhost
         </clock-server>

        Any number of clock-server sections may be defined within a
        single zope.conf.  Note that you must specify a
        username/password combination with the appropriate level of
        access to call the method you've defined.  You can omit the
        username and password if the method is anonymously callable.
        Obviously the password is stored in the clear in the config
        file, so you need to protect the config file with filesystem
        security if the Zope account is privileged and those who have